Prevent vertical videos from overflowing on page
[sc-2386]

--- a/src/components/videoCard/VideoPlayer.module.less
+++ b/src/components/videoCard/VideoPlayer.module.less
@@ -3,4 +3,8 @@
     z-index: 10;
     background: rgba(0, 33, 125, 1);
   }
+
+  :global(.boclips-player-container) {
+    max-height: 545px;
+  }
 }
